--- a/generators/talia_base/templates/README
+++ b/generators/talia_base/templates/README
@@ -6,7 +6,7 @@ script/configure_talia
 to set up the main configuration for database and RDF store. You can also 
 create the configuration by hand.
 
-WARNING: Talia can create HUGE loge files, depending on the level. It is
+WARNING: Talia can create HUGE log files, depending on the level. It is
 highly recommended that you at least add something like this to your
 environment.rb file:
 
